fix pause button alignment

--- a/less/widget-slideshow.less
+++ b/less/widget-slideshow.less
@@ -141,14 +141,12 @@
             width: auto;
             margin: 0 10px;
         }
+        // Centre pause button
+        .pause-toggle {
+            margin: 0 auto;
+        }
     }
 }
-
-// Centre pause button
-.slide-navigation .pause-toggle {
-    margin: 0 auto;
-}
-
 
 // Slideshow Pagination
 // --------------------
